// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad date 1`] = `
{
  "startedAt": {
    "key": "yup:mixed.notType",
    "options": {
      "type": "date",
    },
  },
}
`;

exports[`should be invalid for bad section id 1`] = `
{
  "sectionId": {
    "key": "yup:string.uuid",
    "options": {
      "path": "sectionId",
    },
  },
}
`;

exports[`should be invalid for bad uuid 1`] = `
{
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;
